changed look of some things, also made navabar collapse faster

--- a/TravelExpertsMVC/Views/Contact/AgentsByAgency.cshtml
+++ b/TravelExpertsMVC/Views/Contact/AgentsByAgency.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "AgentsByAgency";
 }
 
-<h1 class="my-5">Contact Us </h1>
+<h1 class="my-5 protest-riot-regular">Contact Us </h1>
 <form asp-action="AgentsByAgency" method="post" class="mb-3">
     <div class="w-50">
         <label class="form-label">Locations</label>
