--- a/TravelExpertsMVC/Views/TravelProduct/Details.cshtml
+++ b/TravelExpertsMVC/Views/TravelProduct/Details.cshtml
@@ -5,9 +5,10 @@
     int price = 0;
 }
 
-<h1>Booking Detail</h1>
+<h1 class="protest-riot-regular mt-5">Booking Detail</h1>
+<a id="booking" asp-controller="TravelProduct" asp-action="Bookings" class="fs-1 text-start text-decoration-none"><i class="fa-solid fa-arrow-left"></i> <span class="">Back to Bookings</span></a>
 
-<table class="table">
+<table class="table table-responsive table-striped table-hover table-sm">
     <thead>
         <tr>
             @*
@@ -32,20 +33,20 @@
                 End of Trip @*TripEnd*@
             </th>
             <th>
-                Base Price @*BasePrice*@
+                Price @*BasePrice*@
             </th>
             <th>
-                Agency Commission@*AgencyCommission*@
+                Commission@*AgencyCommission*@
             </th>
             <th>
                 Fees @*FeeId*@
             </th>
             <th>
-                Total Price @*Total Price (BasePrice + AgencyCommission + Fees)*@
+                Total @*Total Price (BasePrice + AgencyCommission + Fees)*@
             </th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="table-group-divider">
         @foreach (var item in Model)
         {
             <tr>
@@ -231,12 +232,8 @@
                     $@((item.BasePrice.GetValueOrDefault() + item.AgencyCommission.GetValueOrDefault() + price).ToString("F2"))
                     
                 </td>
-                
             </tr>
         }
-        <form action="@Url.Action("Bookings", "TravelProduct")">
-            <button id="booking" type="submit" class="col-6 offset-3">Go Back.</button>
-        </form>
     </tbody>
 </table>
 
