--- a/TravelExpertsMVC/Views/TravelProduct/BookPackage.cshtml
+++ b/TravelExpertsMVC/Views/TravelProduct/BookPackage.cshtml
@@ -20,10 +20,11 @@
     }
 </style>
 <div class="container">
-    <h1 class="mt-5">Book Package</h1>
+    <h1 class="mt-5 protest-riot-regular">Book Package</h1>
     <hr />
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-12">
+            <p></p>
             <form asp-action="BookPackage" method="post">
                 <input type="hidden" asp-for="BookingDate" value="@ViewBag.BookingDate" />
                 <input type="hidden" asp-for="CustomerId" value="@ViewBag.CustomerId" />
@@ -59,11 +60,12 @@
             </form>
         </div>
         
-        <div class="col-md-8">
+        <div class="col-md-8 col-sm-12">
             <!-- Display package information here -->
-            <table class="table">
+            <table class="table table-responsive table-striped table-hover table-sm caption-top">
+                <caption>*All Prices are Per Person</caption>
                 <thead>
-                    <tr>
+                    <tr class="table-primary">
                         <th>Package</th>
                         <th>Destination</th>
                         <th>Description</th>
@@ -72,24 +74,18 @@
                                 <div class="price">
                                     Price
                                 </div>
-                                <div class="per-person">
-                                    * Per Person
-                                </div>
                             </div>
                         </th>
                         <th>
                             <div class="price-container">
                                 <div class="price">
-                                    Agency Commission
-                                </div>
-                                <div class="per-person">
-                                    * Per Person
+                                    Commission
                                 </div>
                             </div>
                         </th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="table-group-divider">
                     <tr>
                         <td>Caribbean New Year</td>
                         <td>Caribbean Islands</td>
@@ -118,7 +114,6 @@
                         <td>$3000</td>
                         <td>$280</td>
                     </tr>
-                   
                 </tbody>
             </table>
         </div>
