--- a/TravelExpertsMVC/Views/TravelProduct/Bookings.cshtml
+++ b/TravelExpertsMVC/Views/TravelProduct/Bookings.cshtml
@@ -6,7 +6,7 @@
     string formattedPrice = Price.ToString("C");
 }
 
-<h1 class="mt-5">My Bookings</h1>
+<h1 class="mt-5 protest-riot-regular">My Bookings</h1>
 
 <table class="table">
     <thead>
