--- a/TravelExpertsMVC/Views/Shared/_HomePartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_HomePartial.cshtml
@@ -10,21 +10,20 @@
     <section class="my-5 home-section">
         <h2 class="text-center protest-riot-regular mb-5">Book A Package <span class=""><i class="fa-solid fa-plane"></i></span></h2>
         <div class="row fw-medium">
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-4 col-sm-12 mb-3">
+                <img src="~/images/polynesian-image2.jpg" class="img-fluid" />
                 <h2 class="text-start">Polynesian Paradise</h2>
                 <p>How About a Polynesian Adventure</p>
             </div>
-            <div class="home-register-img col-md-6 col-sm-12">
-                <img src="~/images/home-turtle.jpg" class="img-fluid"/>
-            </div>
-        </div>
-        <div class="row fw-medium">
-            <div class="col-md-6 col-sm-12 mt-3">
+            <div class="col-md-4 col-sm-12 mb-3">
+                <img src="~/images/european-image.jpg" class="img-fluid" />
                 <h2 class="text-start">European Vacation</h2>
                 <p>Or A Eurpoean Trip Of a LifeTime</p>
             </div>
-            <div class="home-register-img col-md-6 col-sm-12">
-                <img src="~/images/european-image.jpg" class="img-fluid" />
+            <div class="col-md-4 col-sm-12 mb-3">
+                <img src="~/images/korea-image.jpg" class="img-fluid" />
+                <h2 class="text-start">Asian Expedition</h2>
+                <p>Maybe A Trip To Korea</p>
             </div>
         </div>
         <div class="text-center">
