--- a/TravelExpertsMVC/Views/Shared/_HomePartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_HomePartial.cshtml
@@ -45,6 +45,25 @@ else
         </div>
     </div>
 
+    <section class="my-5 text-center">
+        <h2 class="protest-riot-regular">No Matter the Occasion</h2>
+        <div class="row">
+            <div class="col-md-4 col-sm-12 mb-3">
+                <img src="~/images/business-type.jpg" class="img-fluid" />
+                <h5 class="mt-1 fst-italic">For Business</h5>
+            </div>
+            <div class="col-md-4 col-sm-12 mb-3">
+                <img src="~/images/group-type.jpg" class="img-fluid" />
+                <h5 class="mt-1 fst-italic">Friends</h5>
+            </div>
+            <div class="col-md-4 col-sm-12 mb-3">
+                <img src="~/images/leisure-type.jpg" class="img-fluid" />
+                <h5 class="mt-1 fst-italic">Or Leisure</h5>
+            </div>
+        </div>
+        <p class="text-center fs-5 fw-medium">Travel Experts has you covered</p>
+    </section>
+
     <section class="my-5 home-section">
         <h2 class="text-center mb-5 protest-riot-regular">See What Some Of Our Traveleres Had to Say</h2>
         <div class="row">
