started on a new page

--- a/TravelExpertsMVC/Views/Shared/_Layout.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                             <a class="nav-link text-dark @(controller == "Home" && action == "Index" ? "active" : "")"  asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item hover">
+                            <a class="nav-link text-dark @(controller == "Home" && action == "Offers" ? "active" : "")"  asp-controller="Home" asp-action="Offers">Offers</a>
+                        </li>
+                        <li class="nav-item hover">
                             <a class="nav-link text-dark @(controller == "Home" && action == "About" ? "active" : "")"  asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item hover">
