--- a/TravelExpertsMVC/Views/Home/About.cshtml
+++ b/TravelExpertsMVC/Views/Home/About.cshtml
@@ -1,4 +1,8 @@
-﻿    <section class="my-5">
+﻿@{
+    ViewData["Title"] = "About";
+
+}
+<section class="my-5">
         <h1 class="text-center protest-riot-regular mb-5">About Us</h1>
         <div class="row fw-medium">
             <div class="col-md-6 col-sm-12">
