--- a/TravelExpertsMVC/Views/Home/Index.cshtml
+++ b/TravelExpertsMVC/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
                 <div class="">
                     <h1 class="mb-3 text-white">Welcome To Travel Experts</h1>
                     <h3 class="mb-3 text-white">See What we Have To offer</h3>
-                    <a class="btn btn-outline-light btn-lg" role="button">Check it out</a>
+                    <a class="btn btn-outline-light btn-lg" role="button" asp-controller="Home" asp-action="Offers">Check it out</a>
                 </div>
             </div>
         </div>
