--- a/TravelExpertsMVC/Views/Home/Offers.cshtml
+++ b/TravelExpertsMVC/Views/Home/Offers.cshtml
@@ -3,31 +3,31 @@
     ViewData["Title"] = "Offers";
 }
 
-<ul class="nav nav-tabs" id="myTab" role="tablist">
-    <li class="nav-item" role="presentation">
+<ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
+    <li class="nav-item hover" role="presentation">
         <button class="nav-link active" id="polynesia-tab" data-bs-toggle="tab" data-bs-target="#polynesia" type="button" role="tab" aria-controls="poly-tab-pane" aria-selected="true">Polynesia</button>
     </li>
-    <li class="nav-item" role="presentation">
+    <li class="nav-item hover" role="presentation">
         <button class="nav-link" id="expedition-tab" data-bs-toggle="tab" data-bs-target="#expedition" type="button" role="tab" aria-controls="exp-tab-pane" aria-selected="false">Asia</button>
     </li>
-    <li class="nav-item" role="presentation">
+    <li class="nav-item hover" role="presentation">
         <button class="nav-link" id="euro-tab" data-bs-toggle="tab" data-bs-target="#euro" type="button" role="tab" aria-controls="euro-tab-pane" aria-selected="false">Europe</button>
     </li>
-    <li class="nav-item" role="presentation">
+    <li class="nav-item hover" role="presentation">
         <button class="nav-link" id="car-tab" data-bs-toggle="tab" data-bs-target="#car" type="button" role="tab" aria-controls="car-tab-pane" aria-selected="false">Carribean</button>
     </li>
 </ul>
 <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="polynesia" role="tabpanel" aria-labelledby="poly-tab" tabindex="0">
-        <img src="~/images/polynesian-image.jpg" class="img-fluid" />
+        <partial name="_PolyPartial" />
     </div>
     <div class="tab-pane fade" id="expedition" role="tabpanel" aria-labelledby="exp-tab" tabindex="0">
-        <img src="~/images/korea-image2.jpg" class="img-fluid" />
+        <partial name="_AsiaPartial" />
     </div>
     <div class="tab-pane fade" id="euro" role="tabpanel" aria-labelledby="euro-tab" tabindex="0">
-        <img src="~/images/france.jpg" class="img-fluid" />
+        <partial name="_EuroPartial" />
     </div>
     <div class="tab-pane fade" id="car" role="tabpanel" aria-labelledby="car-tab" tabindex="0">
-        <img src="~/images/carribean-image.jpg" class="img-fluid" />
+        <partial name="_CarrPartial" />
     </div>
 </div>
