--- a/TravelExpertsMVC/Views/Shared/_AsiaPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_AsiaPartial.cshtml
@@ -1,2 +1,15 @@
 ﻿
-<img src="~/images/korea-image2.jpg" class="img-fluid" />
+
+<div class="row">
+    <div class="col-md-6 col-sm-12">
+        <img src="~/images/korea-image2.jpg" class="img-fluid" />
+    </div>
+    <div class="col-md-6 col-sm-12 fst-italic">
+        <h2>Asia</h2>
+        <p class="text-dark">
+            If you are looking for an unforgettable travel experience, Asia is the perfect destination. <br />
+            From exquisite cuisine to exotic culture, <br />
+            Asia has everything for you to relax, enjoy, explore, and experience.
+        </p>
+    </div>
+</div>
