--- a/TravelExpertsMVC/Views/Shared/_CarrPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_CarrPartial.cshtml
@@ -1,2 +1,13 @@
 ﻿
-<img src="~/images/carribean-image.jpg" class="img-fluid" />
+<div class="row">
+    <div class="col-md-6 col-sm-12">
+        <img src="~/images/carribean-image.jpg" class="img-fluid" />
+    </div>
+    <div class="col-md-6 col-sm-12 fst-italic">
+        <h2>Carribean</h2>
+        <p class="text-dark">
+            A trip to the Caribbean islands may be just what you need if you're in search of some sun, <br />
+            sand and relaxation.
+        </p>
+    </div>
+</div>
