--- a/TravelExpertsMVC/Views/Shared/_PolyPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_PolyPartial.cshtml
@@ -1,3 +1,14 @@
 ﻿
-<img src="~/images/polynesian-image.jpg" class="img-fluid" />
-
+<div class="row">
+    <div class="col-md-6 col-sm-12">
+        <img src="~/images/polynesian-image.jpg" class="img-fluid" />
+    </div>
+    <div class="col-md-6 col-sm-12 fst-italic">
+        <h2>Polynesia</h2>
+        <p class="text-dark">
+            located in the remote South Pacific Ocean, <br />
+            With more than 100 tropical islands to explore and plenty of things to do, <br />
+            Polynesia is pretty close to paradise on earth.
+        </p>
+    </div>
+</div>
