--- a/TravelExpertsMVC/Views/Shared/_EuroPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_EuroPartial.cshtml
@@ -1,2 +1,13 @@
 ﻿
-<img src="~/images/france.jpg" class="img-fluid" />
+<div class="row">
+    <div class="col-md-6 col-sm-12">
+        <img src="~/images/france.jpg" class="img-fluid" />
+    </div>
+    <div class="col-md-6 col-sm-12 fst-italic">
+        <h2 class="mb-3">Europe</h2>
+        <p class="text-dark">
+            With its rich history, top-rated tourist attractions, and numerous scenic wonders, <br/>
+            Europe offers a wide array of travel experiences for both long and short trips.
+        </p>
+    </div>
+</div>
