done offers page

--- a/TravelExpertsMVC/Views/Home/Offers.cshtml
+++ b/TravelExpertsMVC/Views/Home/Offers.cshtml
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="text-center">
-        <a class="btn Buttons text-bg-light px-4 py-1 fw-medium my-3" asp-controller="TravelProduct" asp-action="BookPackage">Book Now!</a>
+        <a class="btn nav-bg text-bg-light px-4 py-1 fw-medium my-3 offer-btn" asp-controller="TravelProduct" asp-action="BookPackage">Book Now!</a>
     </div>
 </section>
  
