--- a/TravelExpertsMVC/Views/Shared/_PolyPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_PolyPartial.cshtml
@@ -3,12 +3,27 @@
     <div class="col-md-6 col-sm-12">
         <img src="~/images/polynesian-image.jpg" class="img-fluid" />
     </div>
-    <div class="col-md-6 col-sm-12 fst-italic">
+    <div class="col-md-6 col-sm-12 fst-italic my-3">
         <h2>Polynesia</h2>
         <p class="text-dark">
             located in the remote South Pacific Ocean, <br />
             With more than 100 tropical islands to explore and plenty of things to do, <br />
             Polynesia is pretty close to paradise on earth.
         </p>
+    </div>
+</div>
+<div class="row">
+    <h3 class="protest-riot-regular text-center my-3">Photos Taken By Travelers</h3>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/poly-photo-1.jpg" class="img-fluid h-100" />
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/poly-photo-2.jpg" class="img-fluid h-100" />
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/poly-photo-3.jpg" class="img-fluid h-100" />
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/poly-photo-4.jpg" class="img-fluid h-100" />
     </div>
 </div>
