--- a/TravelExpertsMVC/Views/Shared/_AsiaPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_AsiaPartial.cshtml
@@ -4,12 +4,27 @@
     <div class="col-md-6 col-sm-12">
         <img src="~/images/korea-image2.jpg" class="img-fluid" />
     </div>
-    <div class="col-md-6 col-sm-12 fst-italic">
+    <div class="col-md-6 col-sm-12 fst-italic my-3">
         <h2>Asia</h2>
         <p class="text-dark">
             If you are looking for an unforgettable travel experience, Asia is the perfect destination. <br />
             From exquisite cuisine to exotic culture, <br />
             Asia has everything for you to relax, enjoy, explore, and experience.
         </p>
+    </div>
+</div>
+<div class="row">
+    <h3 class="protest-riot-regular text-center my-3">Photos Taken By Travelers</h3>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/asia-photo-1.jpg" class="img-fluid h-100" />
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/asia-photo-2.jpg" class="img-fluid h-100" />
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/asia-photo-3.jpg" class="img-fluid h-100" />
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/asia-photo-4.jpg" class="img-fluid h-100" />
     </div>
 </div>
