--- a/TravelExpertsMVC/Views/Shared/_CarrPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_CarrPartial.cshtml
@@ -3,11 +3,26 @@
     <div class="col-md-6 col-sm-12">
         <img src="~/images/carribean-image.jpg" class="img-fluid" />
     </div>
-    <div class="col-md-6 col-sm-12 fst-italic">
+    <div class="col-md-6 col-sm-12 fst-italic my-3">
         <h2>Carribean</h2>
         <p class="text-dark">
-            A trip to the Caribbean islands may be just what you need if you're in search of some sun, <br />
+            A trip to the Caribbean islands may be just what you need if you're in search of some sun,
             sand and relaxation.
         </p>
+    </div>
+</div>
+<div class="row">
+    <h3 class="protest-riot-regular text-center my-3">Photos Taken By Travelers</h3>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/carr-photo-1.jpg" class="img-fluid h-100" />
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/carr-photo-2.jpg" class="img-fluid h-100" />
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/carr-photo-3.jpg" class="img-fluid h-100" />
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/carr-photo-4.jpg" class="img-fluid h-100" />
     </div>
 </div>
