--- a/TravelExpertsMVC/Views/Shared/_EuroPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_EuroPartial.cshtml
@@ -3,11 +3,26 @@
     <div class="col-md-6 col-sm-12">
         <img src="~/images/france.jpg" class="img-fluid" />
     </div>
-    <div class="col-md-6 col-sm-12 fst-italic">
+    <div class="col-md-6 col-sm-12 fst-italic my-3">
         <h2 class="mb-3">Europe</h2>
         <p class="text-dark">
             With its rich history, top-rated tourist attractions, and numerous scenic wonders, <br/>
             Europe offers a wide array of travel experiences for both long and short trips.
         </p>
+    </div>
+</div>
+<div class="row">
+    <h3 class="protest-riot-regular text-center my-3">Photos Taken By Travelers</h3>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/euro-photo-1.jpg" class="img-fluid h-100" />
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/euro-photo-2.jpg" class="img-fluid h-100" />
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/euro-photo-3.jpg" class="img-fluid h-100" />
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+        <img src="~/images/euro-photo-4.jpg" class="img-fluid h-100" />
     </div>
 </div>
