--- a/TravelExpertsMVC/Views/Shared/_EuroPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_EuroPartial.cshtml
@@ -12,7 +12,7 @@
     </div>
 </div>
 <div class="row">
-    <h3 class="protest-riot-regular text-center my-3">Photos Taken By Travelers</h3>
+    <h3 class="protest-riot-regular text-center mt-5">Photos Taken By Travelers</h3>
     <div class="col-lg-3 col-md-6 col-sm-12">
         <img src="~/images/euro-photo-1.jpg" class="img-fluid h-100" />
     </div>
