--- a/TravelExpertsMVC/Views/Shared/_LoginPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
     @if (User.Identity.IsAuthenticated)
     {var firstName = User.Claims.FirstOrDefault(c => c.Type == "FirstName")?.Value; 
         <li class="nav-item hover">
-            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index" title="Welcome">
+            <a class="nav-link text-dark text-capitalize" asp-controller="Home" asp-action="Index" title="Welcome">
                 Hey @firstName
             </a>
         </li> 
