changes here and there,

--- a/TravelExpertsMVC/Views/Shared/_EuroPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_EuroPartial.cshtml
@@ -6,8 +6,8 @@
     <div class="col-md-6 col-sm-12 fst-italic my-3">
         <h2 class="mb-3">Europe</h2>
         <p class="text-dark">
-            With its rich history, top-rated tourist attractions, and numerous scenic wonders, <br/>
-            Europe offers a wide array of travel experiences for both long and short trips.
+            With its rich history, top-rated tourist attractions, and numerous scenic wonders,
+            Europe offers a wide array of travel experiences for both short and long trips.
         </p>
     </div>
 </div>
