--- a/TravelExpertsMVC/Views/Shared/_PolyPartial.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_PolyPartial.cshtml
@@ -7,7 +7,7 @@
         <h2>Polynesia</h2>
         <p class="text-dark">
             located in the remote South Pacific Ocean, <br />
-            With more than 100 tropical islands to explore and plenty of things to do, <br />
+            With more than 1000 tropical islands to explore and plenty of things to do,
             Polynesia is pretty close to paradise on earth.
         </p>
     </div>
