--- a/TravelExpertsMVC/Views/TravelProduct/Delete.cshtml
+++ b/TravelExpertsMVC/Views/TravelProduct/Delete.cshtml
@@ -5,12 +5,14 @@
   
 }
 
-<div class="text-center alert alert-danger" role="alert">
-    <h3 style="color: red;">You are about to remove this booking from your account. Please confirm your action. </h3>
-    <hr>
-    <form asp-action="Delete">
-        <input type="submit" value="Confirm" class="btn btn-danger" />
-        <input type="submit" asp-action="Bookings" value="Cancel" class="btn btn-warning" />
-    </form>
+<div class="text-center d-flex justify-content-center align-items-center flex-column" role="alert">
+    <div class="alert alert-warning delete-container">
+        <h3 style="color: red;"><i class="fa-solid fa-circle-exclamation"></i> You are about to remove this booking from your account. <br /> Please confirm your action. </h3>
+        <hr>
+        <form asp-action="Delete">
+            <input type="submit" value="Confirm" class="btn btn-danger" />
+            <input type="submit" asp-action="Bookings" value="Cancel" class="btn btn-warning" />
+        </form>
+    </div>
 </div>
 
