added image to nav and favicon

--- a/TravelExpertsMVC/Views/Shared/_Layout.cshtml
+++ b/TravelExpertsMVC/Views/Shared/_Layout.cshtml
@@ -20,12 +20,16 @@
     <link rel="stylesheet" href="~/css/theme.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TravelExpertsMVC.styles.css" asp-append-version="true" />
+    <link rel="icon" href="~/images/favicon.ico" />
 </head>
 <body>
     <header>
         <nav class="nav-bg navbar navbar-expand-md navbar-toggleable-md border-bottom box-shadow mb-3 fw-medium">
             <div class="container">
-                <a class="navbar-brand hover kaushan-script-regular" asp-controller="Home" asp-action="Index">TravelExperts</a>
+                <a class="navbar-brand hover kaushan-script-regular" asp-controller="Home" asp-action="Index">
+					<img src="~/images/logo.png" class="img-fluid" width="50"/>
+                    TravelExperts
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
