--- a/TravelExpertsMVC/Views/TravelProduct/BookPackage.cshtml
+++ b/TravelExpertsMVC/Views/TravelProduct/BookPackage.cshtml
@@ -83,7 +83,7 @@
                                 </div>
                             </div>
                         </th>
-                        
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody class="table-group-divider">
@@ -93,7 +93,12 @@
                         <td>Cruise the Caribbean & Celebrate the New Year.</td>
                         <td>$4800</td>
                         <td>$400</td>
-                        
+                        <td>
+                            <form action="@Url.Action("PackageDetails", "TravelProduct")" method="post">
+                                <input type="hidden" name="packageNo" value="1">
+                                <button type="submit" class="btn btn-primary pkg-button">Details</button>
+                            </form>
+                        </td>
                     </tr>
                     <tr>
                         <td>Polynesian Paradise</td>
