--- a/TravelExpertsMVC/Views/TravelProduct/PackageDetails.cshtml
+++ b/TravelExpertsMVC/Views/TravelProduct/PackageDetails.cshtml
@@ -24,7 +24,7 @@
 			<div id="details">
 				<h1>Caribbean New Year</h1>
 				<p id="destination">
-					<div class="label2" id="koan">Destination: </div>Barbados
+					<div class="label2" id="koan">Destination: </div>Caribbean Islands
 				</p>
 				<p>
 					<div class="label2" id="flight1">Flight: </div>Canada Cruise🍁
@@ -51,12 +51,12 @@
 					</div>
 				</p>
 				<p>
-					<div class="label2" id="tour">Tour Guide: </div><a href="https://www.royalkona.com/plan-your-stay/explore-around-the-big-island">https://www.royalkona.com/plan-your-stay/explore-around-the-big-island</a>
+					<div class="label2" id="tour">Tour Guide: </div><a href="https://www.oyster.com/articles/caribbean-island-hopping-guide/">https://www.oyster.com/articles/caribbean-island-hopping-guide/</a>
 				</p>
 				<p>
 					<div class="label2" id="date">Date: </div>December 26 - January 4
 				</p>
-				<button type="button" id="book">Book</button>
+				
 			
 			
 			</div>
@@ -72,30 +72,29 @@
 
 			<div id="imgContainer">
 				<!--Images for left side of package container-->
-				<img id="image" src="~/images/barbados.webp"><br>
-				<img id="image" src="~/images/Canadacruises.webp">
+				<img id="image" src="~/images/polynesian1.webp"><br>
+				<img id="image" src="~/images/polynesian2.webp">
 
 			</div>
 			<div id="details">
-				<h1>Caribbean New Year</h1>
+				<h1>Polynesian Paradise</h1>
 				<p id="destination">
-					<div class="label2" id="koan">Destination: </div>Barbados
+					<div class="label2" id="koan">Destination: </div>Polynesian Islands
 				</p>
 				<p>
-					<div class="label2" id="flight1">Flight: </div>Canada Cruise🍁
+					<div class="label2" id="flight1">Flight: </div>Air Canada🍁
 				</p>
 				<p>
 					<div class="label2" id="rating">Rating: </div>
 					<div id="stars">★★★★★</div>
 				</p>
 				<p>
-					<div class="label2" id="price">Price: </div>$4,800
+					<div class="label2" id="price">Price: </div>$3,000
 				</p>
 				<p>
-					<div class="label2" id="description">Description: </div>
-					Embark on an unforgettable journey aboard a luxurious cruise ship bound for the Caribbean,
-					where azure waters and vibrant island cultures await. As you set sail from the bustling port city,
-					excitement fills the air as anticipation for a New Year's celebration builds.
+					<div class="label2" id="description">Description: </div>Embark on an unparalleled journey aboard a luxurious cruise ship bound for the captivating Polynesian Paradise. 
+					Here, azure waters, vibrant island cultures, and lush landscapes await your arrival. 
+					As you set sail from the bustling port city, anticipation for an extraordinary New Year's celebration fills the air. 
 				</p>
 				<p>
 					<div class="label2" id="review">Amenities: </div>
@@ -106,12 +105,12 @@
 					</div>
 				</p>
 				<p>
-					<div class="label2" id="tour">Tour Guide: </div><a href="https://www.royalkona.com/plan-your-stay/explore-around-the-big-island">https://www.royalkona.com/plan-your-stay/explore-around-the-big-island</a>
+					<div class="label2" id="tour">Tour Guide: </div><a href="https://greenglobaltravel.com/polynesian-islands-polynesian-triangle/">https://greenglobaltravel.com/polynesian-islands-polynesian-triangle/</a>
 				</p>
 				<p>
 					<div class="label2" id="date">Date: </div>December 26 - January 4
 				</p>
-				<button type="button" id="book">Book</button>
+				
 
 
 			</div>
@@ -123,17 +122,17 @@
 
 			<div id="imgContainer">
 				<!--Images for left side of package container-->
-				<img id="image" src="~/images/barbados.webp"><br>
-				<img id="image" src="~/images/Canadacruises.webp">
+				<img id="image" src="~/images/polynesian1.webp"><br>
+				<img id="image" src="~/images/polynesian2.webp">
 
 			</div>
 			<div id="details">
-				<h1>Caribbean New Year</h1>
+				<h1>Asian Expedition</h1>
 				<p id="destination">
-					<div class="label2" id="koan">Destination: </div>Barbados
+					<div class="label2" id="koan">Destination: Japan, Thailand, Korea</div>
 				</p>
 				<p>
-					<div class="label2" id="flight1">Flight: </div>Canada Cruise🍁
+					<div class="label2" id="flight1">Flight: </div>Air Canada🍁
 				</p>
 				<p>
 					<div class="label2" id="rating">Rating: </div>
@@ -144,9 +143,9 @@
 				</p>
 				<p>
 					<div class="label2" id="description">Description: </div>
-					Embark on an unforgettable journey aboard a luxurious cruise ship bound for the Caribbean,
+					Embark on an unforgettable journey aboard a luxurious trip around asia,
 					where azure waters and vibrant island cultures await. As you set sail from the bustling port city,
-					excitement fills the air as anticipation for a New Year's celebration builds.
+					excitement fills the air as anticipation for a chinese new years celebration builds.
 				</p>
 				<p>
 					<div class="label2" id="review">Amenities: </div>
@@ -162,7 +161,7 @@
 				<p>
 					<div class="label2" id="date">Date: </div>December 26 - January 4
 				</p>
-				<button type="button" id="book">Book</button>
+				
 
 
 			</div>
@@ -174,17 +173,17 @@
 
 			<div id="imgContainer">
 				<!--Images for left side of package container-->
-				<img id="image" src="~/images/barbados.webp"><br>
-				<img id="image" src="~/images/Canadacruises.webp">
+				<img id="image" src="~/images/polynesian1.webp"><br>
+				<img id="image" src="~/images/polynesian2.webp">
 
 			</div>
 			<div id="details">
-				<h1>Caribbean New Year</h1>
+				<h1>European Vacation</h1>
 				<p id="destination">
-					<div class="label2" id="koan">Destination: </div>Barbados
+					<div class="label2" id="koan">Destination: </div>France, Italy, Spain
 				</p>
 				<p>
-					<div class="label2" id="flight1">Flight: </div>Canada Cruise🍁
+					<div class="label2" id="flight1">Flight: </div>Air Canada🍁
 				</p>
 				<p>
 					<div class="label2" id="rating">Rating: </div>
@@ -195,7 +194,7 @@
 				</p>
 				<p>
 					<div class="label2" id="description">Description: </div>
-					Embark on an unforgettable journey aboard a luxurious cruise ship bound for the Caribbean,
+					Embark on an unforgettable journey aboard a luxurious trip for Europe,
 					where azure waters and vibrant island cultures await. As you set sail from the bustling port city,
 					excitement fills the air as anticipation for a New Year's celebration builds.
 				</p>
@@ -213,7 +212,7 @@
 				<p>
 					<div class="label2" id="date">Date: </div>December 26 - January 4
 				</p>
-				<button type="button" id="book">Book</button>
+				
 
 
 			</div>
