--- a/TravelExpertsMVC/Views/Home/About.cshtml
+++ b/TravelExpertsMVC/Views/Home/About.cshtml
@@ -8,9 +8,35 @@
             <div class="col-md-6 col-sm-12">
                 <h2>Welcome to Travel Experts</h2>
                 <p class="my-3">
-                    Discover the lastest trends and innovations in technology,
-                    design and more. Our team of experts brings you the best
-                    content and insights to help you stay ahead of the curve
+                Welcome to TravelExperts, your gateway to extraordinary journeys and unforgettable adventures. At TravelExperts, 
+                we believe that travel is not just about visiting new places; 
+                it's about creating lasting memories, forging connections, and exploring the beauty of our diverse world.<br/>
+
+                Founded with a passion for wanderlust and a commitment to exceptional service, 
+                TravelExperts is your trusted companion in crafting bespoke travel experiences.
+                Whether you dream of relaxing on pristine beaches, embarking on cultural explorations, 
+                or seeking thrilling adventures, our team of dedicated travel enthusiasts is here to turn your dreams into reality.<br />
+
+                What sets TravelExperts apart is our unwavering dedication to creating personalized 
+                itineraries tailored to your unique preferences. Our experienced travel advisors are equipped 
+                with in-depth destination knowledge and a genuine love for curating journeys that go beyond the ordinary. 
+                From luxurious escapes to budget-friendly getaways, we cater to every type of traveler.<br />
+
+                At the heart of TravelExperts is a commitment to responsible and sustainable tourism. 
+                We strive to make a positive impact on the destinations we visit,
+                respecting local cultures and supporting eco-friendly initiatives. 
+                As avid explorers ourselves, we understand the importance of preserving the beauty of our planet for future generations.<br />
+
+                Explore our website to discover a treasure trove of travel inspiration, 
+                from travel tips and destination guides to exclusive deals and insider insights.
+                Whether you're a solo adventurer, a couple seeking a romantic getaway, 
+                or a family in search of memorable experiences, TravelExperts has the perfect journey waiting for you.<br />
+
+                Join us on a voyage of discovery, where every trip is a chapter in 
+                your unique travel story. Let TravelExperts be your 
+                compass as you embark on the adventure of a lifetime.<br />
+
+                Travel with passion. Travel with expertise. Travel with TravelExperts.
                 </p>
                 <button class="btn-about mb-5">Learn More</button>
             </div>
